# commit-reviewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  install.sh  uninstall.sh
backend/: pyproject.toml
backend/commit_reviewer/: __init__.py  cli.py  collector.py  config.py  console.py  errors.py  evaluator.py  models.py  openrouter.py  report.py
backend/tests/: conftest.py  test_cli.py  test_collector.py  test_evaluator.py  test_openrouter.py  test_report.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  ratings.ts  types.ts
frontend/src/components/: CommitList.tsx  CommitRow.tsx  Filters.tsx  Header.tsx  RatingBadge.tsx  States.tsx  SummaryBar.tsx  ThemeToggle.tsx
frontend/src/hooks/: useDarkMode.ts  useReport.ts
