[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-reviewer"
version = "0.1.0"
description = "Review recent git commit messages with an LLM and serve an HTML report."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
review-commits = "commit_reviewer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["commit_reviewer*"]

[tool.setuptools.package-data]
commit_reviewer = ["web/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["commit_reviewer"]
mypy_path = "."

[[tool.mypy.overrides]]
module = ["dotenv.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["commit_reviewer", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
